Login com JWTAuth comentando código para  usar no swagger
